backup/manifest/dev/deployments.yaml
apiVersion: v1
items:
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      deployment.kubernetes.io/revision: "1"
    labels:
      app: hi-dev
    name: hi-dev-deployment
    namespace: dev
  spec:
    progressDeadlineSeconds: 600
    replicas: 2
    revisionHistoryLimit: 10
    selector:
      matchLabels:
        app: hi-dev
    strategy:
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
      type: RollingUpdate
    template:
      metadata:
        creationTimestamp: null
        labels:
          app: hi-dev
      spec:
        containers:
        - image: sabzali/devops-api:2025.11.01-19
          imagePullPolicy: IfNotPresent
          name: hi-dev
          ports:
          - containerPort: 8080
            protocol: TCP
          resources: {}
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        schedulerName: default-scheduler
        securityContext: {}
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2025-10-23T12:21:58Z"
      lastUpdateTime: "2025-10-23T12:31:17Z"
      message: ReplicaSet "hi-dev-deployment-5965b8947c" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-10-26T07:23:06Z"
      lastUpdateTime: "2025-10-26T07:23:06Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 2
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    name: nginx-deployment
    namespace: dev
    labels:
      app: nginx
  spec:
    replicas: 1
    revisionHistoryLimit: 10
    progressDeadlineSeconds: 600
    strategy:
      type: RollingUpdate
      rollingUpdate:
        maxSurge: 25%
        maxUnavailable: 25%
    selector:
      matchLabels:
        app: nginx
    template:
      metadata:
        labels:
          app: nginx
      spec:
        containers:
          - name: nginx
            image: docker.arvancloud.ir/nginx
            imagePullPolicy: Always
            ports:
              - containerPort: 80
                protocol: TCP
            volumeMounts:
              - name: nginx-config
                mountPath: /etc/nginx/nginx.conf
                subPath: nginx.conf
              - name: html-content
                mountPath: /usr/share/nginx/html
            resources: { }
            terminationMessagePath: /dev/termination-log
            terminationMessagePolicy: File
        volumes:
          - name: nginx-config
            configMap:
              name: nginx-conf   
          - name: html-content
            configMap:
              name: nginx-html
        dnsPolicy: ClusterFirst
        restartPolicy: Always
        terminationGracePeriodSeconds: 30
  status:
    availableReplicas: 2
    conditions:
    - lastTransitionTime: "2025-10-25T06:35:54Z"
      lastUpdateTime: "2025-10-25T06:36:01Z"
      message: ReplicaSet "nginx-deployment-697457668" has successfully progressed.
      reason: NewReplicaSetAvailable
      status: "True"
      type: Progressing
    - lastTransitionTime: "2025-10-26T07:23:11Z"
      lastUpdateTime: "2025-10-26T07:23:11Z"
      message: Deployment has minimum availability.
      reason: MinimumReplicasAvailable
      status: "True"
      type: Available
    observedGeneration: 4
    readyReplicas: 2
    replicas: 2
    updatedReplicas: 2
kind: List
metadata:
  resourceVersion: ""
